# 3l-cvrp

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
cpp/3L-VehicleRouting/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt
cpp/3L-VehicleRouting/3L-VehicleRoutingApplication/: CMakeLists.txt
cpp/3L-VehicleRouting/3L-VehicleRoutingApplication/src/: 3L-VehicleRoutingApplication.cpp
cpp/3L-VehicleRouting/CommonBasics/: CMakeLists.txt
cpp/3L-VehicleRouting/CommonBasics/include/CommonBasics/Algorithms/: BaseModels.h
cpp/3L-VehicleRouting/CommonBasics/include/CommonBasics/Helper/: CPServices.h  MIPServices.h  ModelServices.h
cpp/3L-VehicleRouting/ContainerLoading/: CMakeLists.txt
cpp/3L-VehicleRouting/ContainerLoading/include/ContainerLoading/: LoadingChecker.h  ProblemParameters.h
cpp/3L-VehicleRouting/ContainerLoading/include/ContainerLoading/Algorithms/: CPSolverParameters.h  LoadingStatus.h  PlacementPoints.h
cpp/3L-VehicleRouting/ContainerLoading/include/ContainerLoading/Algorithms/MultiContainer/: BP_MIP_1D.h
cpp/3L-VehicleRouting/ContainerLoading/include/ContainerLoading/Algorithms/SingleContainer/: OPP_CP_3D.h
cpp/3L-VehicleRouting/ContainerLoading/include/ContainerLoading/Helper/: HelperIO.h  Serialization.h
cpp/3L-VehicleRouting/ContainerLoading/include/ContainerLoading/Model/: Container.h  ContainerLoadingInstance.h
cpp/3L-VehicleRouting/ContainerLoading/src/: LoadingChecker.cpp
cpp/3L-VehicleRouting/ContainerLoading/src/Algorithms/: PlacementPoints.cpp
cpp/3L-VehicleRouting/ContainerLoading/src/Algorithms/MultiContainer/: BP_MIP_1D.cpp
cpp/3L-VehicleRouting/ContainerLoading/src/Algorithms/SingleContainer/: OPP_CP_3D.cpp
cpp/3L-VehicleRouting/ContainerLoading/src/Helper/: Serialization.cpp
cpp/3L-VehicleRouting/ContainerLoading/src/Model/: Container.cpp
cpp/3L-VehicleRouting/VehicleRouting/: CMakeLists.txt
cpp/3L-VehicleRouting/VehicleRouting/include/VehicleRouting/Algorithms/: BCRoutingParams.h  BranchAndCutSolver.h  Evaluation.h  LoadingInterfaceServices.h  SubtourCallback.h  VehicleRoutingModels.h
cpp/3L-VehicleRouting/VehicleRouting/include/VehicleRouting/Algorithms/Cuts/: BaseCut.h  CATCut.h  CVRPSEPCut.h  Cut.h  DK_minus.h  DK_plus.h  FCI.h  GLM.h  Graph.h  LazyConstraintsGenerator.h  MSTAR.h  RCCut.h  SCI.h
cpp/3L-VehicleRouting/VehicleRouting/include/VehicleRouting/Algorithms/Heuristics/: Constructive.h  FullEnumerationSearch.h  LocalSearch.h  SPHeuristic.h  TwoOpt.h
cpp/3L-VehicleRouting/VehicleRouting/include/VehicleRouting/Helper/: HelperIO.h  Serialization.h  Timer.h
cpp/3L-VehicleRouting/VehicleRouting/include/VehicleRouting/Model/: Instance.h  Node.h  Solution.h  Vehicle.h
cpp/3L-VehicleRouting/VehicleRouting/src/Algorithms/: BranchAndCutSolver.cpp  LoadingInterfaceServices.cpp  SubtourCallback.cpp  VehicleRoutingModels.cpp
cpp/3L-VehicleRouting/VehicleRouting/src/Algorithms/Cuts/: BaseCut.cpp  CATCut.cpp  DK_minus.cpp  DK_plus.cpp  FCI.cpp  GLM.cpp  Graph.cpp  LazyConstraintsGenerator.cpp  MSTAR.cpp  RCCut.cpp  SCI.cpp
cpp/3L-VehicleRouting/VehicleRouting/src/Algorithms/Heuristics/: Constructive.cpp  FullEnumerationSearch.cpp  SPHeuristic.cpp  TwoOpt.cpp
cpp/3L-VehicleRouting/VehicleRouting/src/Helper/: HelperIO.cpp  Serialization.cpp
cpp/3L-VehicleRouting/VehicleRouting/src/Model/: Instance.cpp
cpp/3L-VehicleRouting/cmake/: FindGUROBI.cmake
data/input/: README.md
data/input/3l-cvrp/: E016-03m.json  E016-05m.json  E021-04m.json  E021-06m.json  E022-04g.json  E022-06m.json  E023-03g.json  E023-05s.json  E026-08m.json  E030-03g.json  E030-04s.json  E031-09h.json  E033-03n.json  E033-04g.json  E033-05s.json  E036-11h.json  E041-14h.json  E045-04f.json  E051-05e.json
data/input/3l-cvrp/parameters/: BenchmarkParameters.json  BenchmarkParameters_AllConstraints.json  BenchmarkParameters_AllConstraintsSimple.json  BenchmarkParameters_LoadingOnly.json  BenchmarkParameters_NoFragility.json  BenchmarkParameters_NoLifo.json  BenchmarkParameters_NoSupport.json
data/output/: README.md
data/output/3l-cvrp/all-constraints/: parameters.json
data/output/3l-cvrp/all-constraints-basic/: parameters.json
data/output/3l-cvrp/all-constraints-basic/e016-03m/run-0/: solution-E016-03m.json  solution-statistics-E016-03m.json
data/output/3l-cvrp/all-constraints-basic/e016-05m/run-0/: solution-E016-05m.json  solution-statistics-E016-05m.json
data/output/3l-cvrp/all-constraints-basic/e021-04m/run-0/: solution-E021-04m.json  solution-statistics-E021-04m.json
data/output/3l-cvrp/all-constraints-basic/e021-06m/run-0/: solution-E021-06m.json  solution-statistics-E021-06m.json
data/output/3l-cvrp/all-constraints-basic/e022-04g/run-0/: solution-E022-04g.json  solution-statistics-E022-04g.json
data/output/3l-cvrp/all-constraints-basic/e022-06m/run-0/: solution-E022-06m.json  solution-statistics-E022-06m.json
data/output/3l-cvrp/all-constraints-basic/e023-03g/run-0/: solution-E023-03g.json
data/output/3l-cvrp/all-constraints-basic/e023-05s/run-0/: solution-E023-05s.json
data/output/3l-cvrp/all-constraints-basic/e026-08m/run-0/: solution-E026-08m.json  solution-statistics-E026-08m.json
data/output/3l-cvrp/all-constraints-basic/e030-04s/run-0/: solution-statistics-E030-04s.json
data/output/3l-cvrp/all-constraints-basic/e031-09h/run-0/: solution-E031-09h.json
data/output/3l-cvrp/all-constraints-basic/e033-04g/run-0/: solution-statistics-E033-04g.json
data/output/3l-cvrp/all-constraints-basic/e033-05s/run-0/: solution-statistics-E033-05s.json
data/output/3l-cvrp/all-constraints-basic/e036-11h/run-0/: solution-E036-11h.json
data/output/3l-cvrp/cvrp/: parameters.json
data/output/3l-cvrp/loading-only/: parameters.json
data/output/3l-cvrp/no-fragility/: parameters.json
data/output/3l-cvrp/no-lifo/: parameters.json
data/output/3l-cvrp/no-support/: parameters.json
python/: pyproject.toml  requirements.txt
python/visualization/: ColorConversion.py  PackingVisualizer.py  RouteVisualizer.py  SolutionVisualizer.py  StatisticAnalyzer.py
(+363 files in other folders)
